# mal

./: .gitignore  CNAME  DEPLOYMENT.md  HANDOVER.md  Jenkinsfile  README.md  docker-compose.yml
crawler/: .env.example  Dockerfile  pyproject.toml
crawler/src/: config.py  dashboard_client.py  db.py  logging.py  main.py  models.py  monitoring.py  scheduler_main.py
crawler/src/clients/: horse_detail.py  horse_rank_change.py  horse_rating.py  jockey.py  jockey_change.py  kma_asos.py  kra_base.py  naver_news.py  owner.py  race_annual_plan.py  race_chulma.py  race_dividend.py  race_info.py  race_result.py  race_result_corner.py  race_sales.py  race_today_html.py  trainer.py  youtube.py
crawler/src/jobs/: backfill_dividends.py  backfill_history.py  backfill_races_from_entries.py  chunked_backfill.py  chunked_backfill_dividends.py  periodic.py  sync_favorite_notifications.py  sync_horse_rank_changes.py  sync_horse_ratings.py  sync_horses.py  sync_jockey_changes.py  sync_naver_news.py  sync_owners.py  sync_race_corners.py  sync_race_dividends.py  sync_race_entries.py  sync_race_info.py  sync_race_plan.py  sync_race_result_corner.py  sync_race_sales.py  sync_race_today_meta.py  sync_races.py  sync_trainers.py  sync_videos.py  sync_videos_backfill.py  sync_videos_bulk.py  sync_weather.py
crawler/systemd/: README.md  mal-collector-periodic-race-entries.timer  mal-collector-periodic-race-plan.timer  mal-collector-periodic-races-live.timer  mal-collector-periodic-races-yesterday.timer  mal-collector-periodic-settle-bets.timer  mal-collector-periodic-videos.timer
(+252 files in other folders)
